# translation_app

./: README.md  pyproject.toml  report.md  translated_article.md
src/translation_app/: crew.py  main.py
src/translation_app/config/: agents.yaml  tasks.yaml
