[project]
name = "translation_app"
version = "0.1.0"
description = "translation_app using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
translation_app = "translation_app.main:run"
run_crew = "translation_app.main:run"
train = "translation_app.main:train"
replay = "translation_app.main:replay"
test = "translation_app.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
